fix up broken css and js after refactor

--- a/assets/section-counter.css
+++ b/assets/section-counter.css
@@ -8,7 +8,6 @@
   background-color: var(--neutral-950);
   color: var(--white);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   text-align: center;
 }
 
@@ -31,26 +30,12 @@
 
 @media screen and (max-width: 768px) {
   .counter__container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .counter__counters:nth-last-child(2) {
-    border-right: none;
-  }
-
-  .counter__counters:last-child {
-    grid-column: span 2;
-  }
-}
-
-@media screen and (max-width: 570px) {
-  .counter__container {
     display: flex;
     flex-direction: column;
   }
 
   .counter__counters {
     border-right: none;
-    margin: var(--space-m);
+    margin: var(--space-l);
   }
 }
